<resources>
    <string name="app_name">OrderXpress</string>

    <!-- Strings para: el inicio de sesion -->
    <string name="icorreo">Ingresa tu Correo</string>
    <string name="icontra"> Contraseña</string>
    <string name="IniSec">Iniciar Sesión</string>
    <string name="Registrate"> Registrate</string>
    <string name="AunNo">¿Aun no tengo cuenta? </string>
    <string name="olviContra">¿Olvidaste la contraseña? </string>
    <string name="recu">Recuperar </string>
    <string name="Correo"> Correo</string>
    <string name="Contraseña">Contraseña </string>
    <string name="Usuario"> Usuario </string>
    <string name="IniGoogle">Iniciar Sesión con Google </string>
    <string name="AceptoCondiciones">Acepto Terminos y Condiciones</string>

    <!-- Strings para Registro: -->
    <string name="nombre">Nombre</string>
    <string name="numero">Teléfono</string>
    <string name="tuRepartidor">Repartidor</string>
    <string name="tuPedidos">Pedidos</string>
    <string name="registrarme">Registrarme</string>
    <string name="yaTengo">¿Ya tengo cuenta?</string>
    <string name="usuario">Tipo de usuario</string>

    <!-- Strings para Solicitar Recuperar Cuenta -->
    <string name="solicitarRecuperar">Recuperar Contraseña</string>
    <string name="solicitarCorreo">Correo</string>
    <string name="solicitarBoton">Solicitar</string>
    <!-- Strings para Recuperar Cuenta -->

    <!-- Strings para:Navagation-->
    <string name="open_nav">Abrir menu de navegación</string>
    <string name="close_nav">Cerrar menu de navegación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_conversor">Conversor</string>

    <string name="txt_titulo">Titulo</string>
    <string name="txt_notas">Notas</string>
    <string name="txt_fecha">Fecha</string>

    <string name="title_temperatura">Temperatura</string>
    <string name="title_volumen">Volumen</string>
    <string name="title_longitud">Longitud</string>
    <string name="title_peso">Peso</string>
    <string name="txt_de">De: </string>
    <string name="txt_a">A: </string>
    <string name="btn_Convertir">Convertir</string>

    <string name="tool_open">Open</string>
    <string name="tool_close">Close</string>

    <!-- Strings para: -->
</resources>