<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".registrarCuenta">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!---Titulo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/Registrate"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <!---Seccion de campos -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/borde"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nombre"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/borde"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/etIUsuario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/Usuario"
                android:textSize="20sp" />

        </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/borde">


            <EditText
                android:id="@+id/etIPassword"
                android:layout_toStartOf="@+id/passwordicon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="contraseña"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:maxLines="1"
                />


            <ImageView
                android:id="@+id/passwordicon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/eyeoff"
                android:adjustViewBounds="true"
                android:layout_marginTop="20dp"/>
            </RelativeLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/borde"
            android:orientation="horizontal"
            android:padding="12dp">


            <EditText
                android:id="@+id/etSRCCorreo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/Correo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/borde"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/etNumero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/numero"
                android:textSize="20sp" />

        </LinearLayout>

<!---Otra seccion -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTipoUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbRepartidor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/tuRepartidor"
                    android:textAlignment="textEnd"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cbPedidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuPedidos"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yaTengo"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/rdLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="cambiarLogin"
                    android:text="@string/IniSec"
                    android:textColor="#3D69BF"
                    android:textStyle="bold|italic" /> />
            </TableRow>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:backgroundTint="#3D69BF"
                android:elevation="200dp"
                android:onClick="irAInicio"
                android:text="@string/registrarme"
                android:textColor="@color/Blanco"
                android:translationZ="200dp"
                app:cornerRadius="100dp" />
        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>
</ScrollView>