<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".soliRecuperarCuenta">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:padding="20dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/solicitarRecuperar"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/borde"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/etSRCCorreo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/solicitarCorreo"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:orientation="vertical">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yaTengo"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/rdLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="cambiarLogin"
                    android:text="@string/IniSec"
                    android:textColor="#3D69BF"
                    android:textStyle="bold|italic" /> />
            </TableRow>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnSoliRecuperar"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#3D69BF"
                android:elevation="200dp"
                android:onClick="cambiarRegistro"
                android:text="@string/solicitarBoton"
                android:textColor="@color/Blanco"
                android:translationZ="200dp"
                app:cornerRadius="100dp" />

        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>
</ScrollView>